--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,14 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="pink">#FFF72585</color>
+    <color name="pink_purple">#FFB5179E</color>
+    <color name="purple">#FF560BAD</color>
+    <color name="purple_blue">#FF3F37C9</color>
+    <color name="blue">#FF4361EE</color>
+    <color name="teal">#FF4CC9F0</color>
+    <color name="gray">#FFF0F0F3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal_200">#FF4CC9F0</color>
 </resources>
