--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,9 +44,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:textSize="56sp"
+        android:textSize="32sp"
         android:text="@string/currentUV"
         app:layout_constraintTop_toBottomOf="@id/activity_main_linechart"
+        app:layout_constraintStart_toStartOf="@id/vertical_guideline"
+        app:layout_constraintEnd_toEndOf="@id/vertical_guideline" />
+
+    <TextView
+        android:id="@+id/timeLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:textSize="32sp"
+        android:text="@string/timeLeft"
+        app:layout_constraintTop_toBottomOf="@id/currentUV"
         app:layout_constraintStart_toStartOf="@id/vertical_guideline"
         app:layout_constraintEnd_toEndOf="@id/vertical_guideline" />
 
