--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -27,13 +27,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/skin_type_label"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:text="@string/skin_type_label"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
     <Spinner
         android:id="@+id/skin_type"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
         android:entries="@array/skin_type_array"
-        app:layout_constraintStart_toStartOf="@id/guideline2"
+        app:layout_constraintStart_toEndOf="@id/skin_type_label"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
     <TextView
@@ -44,13 +54,23 @@
         app:layout_constraintStart_toStartOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/skin_type" />
 
+
+    <TextView
+        android:id="@+id/spf_label"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:text="@string/spf_label"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/skin_type_label" />
+
     <Spinner
         android:id="@+id/spf"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:entries="@array/spf_array"
-        app:layout_constraintStart_toStartOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/skin_type"
         app:layout_constraintTop_toBottomOf="@id/skin_type" />
 
     <ImageButton
